[package]
name = "shadoq_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
poise = "0.5.7"
serde = { version = "1.0.195", features = ["derive"] }
surrealdb = "1.0.2"
tokio = { version = "1.35.1", features = ["full"] }
